--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
     <div class="container">
         <div class="input-wrapper">
-            <input type="text" id="input">
+            <input type="text" id="input"> 
         </div>
         <div class="buttons-wrapper">
-            <button  id="clear">AC</button >
-            <button  id="delete">DEL</button >
-            <button  id="button ide">/</button >
-            <button  id="seven">7</button >
-            <button  id="eigth">8</button >
-            <button  id="nine">9</button >
-            <button  id="times">X</button >
-            <button  id="four">4</button >
-            <button  id="five">5</button >
-            <button  id="six">6</button >
-            <button  id="minus">-</button >
-            <button  id="one">1</button >
-            <button  id="two">2</button >
-            <button  id="three">3</button >
-            <button  id="plus">+</button >
-            <button  id="zero">0</button >
-            <button  id="comma">.</button >
-            <button  id="assign">=</button >
+            <button  id="clear" style="grid-area: clear">AC</button >
+            <button  id="delete" style="grid-area: delete">DEL</button >
+            <button  id="divide" style="grid-area: divide">/</button >
+            <button  id="seven" style="grid-area: seven">7</button >
+            <button  id="eigth" style="grid-area: eigth">8</button >
+            <button  id="nine" style="grid-area: nine">9</button >
+            <button  id="times" style="grid-area: times">X</button >
+            <button  id="four" style="grid-area: four">4</button >
+            <button  id="five" style="grid-area: five">5</button >
+            <button  id="six" style="grid-area: six">6</button >
+            <button  id="minus" style="grid-area: minus">-</button >
+            <button  id="one" style="grid-area: one">1</button >
+            <button  id="two" style="grid-area: two">2</button >
+            <button  id="three" style="grid-area: three">3</button >
+            <button  id="plus" style="grid-area: plus">+</button >
+            <button  id="zero" style="grid-area: zero">0</button >
+            <button  id="comma" style="grid-area: comma">.</button >
+            <button  id="assign" style="grid-area: assign">=</button >
         </div>
     </div> 
+    <script src="script.js"></script>
 </body>
 </html>
