first script of Javascript, my head bout to blow

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="buttons-wrapper">
             <button  id="clear" style="grid-area: clear">AC</button >
             <button  id="delete" style="grid-area: delete">DEL</button >
-            <button  id="divide" style="grid-area: divide">/</button >
+            <button  id="divide" style="grid-area: divide">÷</button >
             <button  id="seven" style="grid-area: seven">7</button >
             <button  id="eigth" style="grid-area: eigth">8</button >
             <button  id="nine" style="grid-area: nine">9</button >
-            <button  id="times" style="grid-area: times">X</button >
+            <button  id="times" style="grid-area: times">x</button >
             <button  id="four" style="grid-area: four">4</button >
             <button  id="five" style="grid-area: five">5</button >
             <button  id="six" style="grid-area: six">6</button >
