--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <div class="input-wrapper">
-            <input type="text" id="input"> 
+            <div id="input">
+                <div id="display">0</div>
+            </div>
         </div>
         <div class="buttons-wrapper">
             <button  id="clear" style="grid-area: clear">AC</button >
